--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-left: 1rem;
+  background-color:#f1edec;
 }
-
+html,body{
+  min-height: 100% !important;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
